<resources>

    <string name="app_name">ComBanNau</string>
    <string name="my_cart">Giỏ hàng</string>
    <string name="book_history">Lịch sử</string>
    <string name="settings">Cài đặt</string>
    <string name="title_activity_login">Sign in</string>

    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>

    <!-- Strings related to login -->
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="contact">Contact us</string>
    <string name="signUp">No account yet? Create one</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="btnSignUp">Create</string>
    <string name="create">Create</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login_failed">Login Failed</string>
    <string name="ok">OK</string>
    <string name="details">Details</string>
    <string name="please_type_full_info">Type your email and password</string>
    <string name="email_not_verified">Bạn chưa xác nhận email</string>
    <string name="create_account_failed">Create Account Failed</string>
    <string name="u_must_verify">Chúng tôi đã gửi email kích hoạt tới email của bạn, mở thư để kích hoạt tài khoản</string>
    <string name="resend_verified">Gửi lại</string>
    <string name="need_profile_setup">Thông tin cá nhân của bạn chưa hoàn thiện, bạn cần hoàn thành hồ sơ để tiếp tục sử dụng ứng dụng</string>
    <string name="add_message">Add Message Firebase Functions</string>
    <string name="error_upload_avatar">Có lỗi khi upload avatar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_feed">Bài đăng</string>
    <string name="book">Đơn đặt hàng</string>
    <string name="title">Tiêu đề</string>
    <string name="content">Nội dung</string>
    <string name="upload">Đăng</string>
    <string name="image_description">Description</string>
    <string name="is_your_location">Đây là vị trí của bạn</string>
    <string name="your_place">Vị trí của bạn</string>
    <string name="tap_to_choose">Tap để chọn</string>
    <string name="you_must_enter_title">Bạn phải nhập tiêu đề</string>
    <string name="you_must_enter_content">Bạn phải nhập nội dung bài viết</string>
    <string name="you_must_enter_place">Bạn phải chọn địa điểm</string>
    <string name="user_phone">Phone number</string>
    <string name="getUrl_failer">Có lỗi khi lấy url file</string>
    <string name="menu_uploaded">Đã đăng thực đơn</string>
    <string name="menu_upload_failed">Có lỗi khi đăng thực đơn</string>
    <string name="create_post_name">Tiêu đề</string>
    <string name="create_post_description">Mô tả</string>
    <string name="create_post_price">Giá</string>
    <string name="create_post_setNumber">Số suất</string>
    <string name="create_post_mienBac">Miền bắc</string>
    <string name="create_post_mienTrung">Miền Trung</string>
    <string name="create_post_mienNam">Miền Nam</string>
    <string name="create_post_keyWords">Từ khóa</string>
    <string name="create_post_endTime">Hết hạn nhận đơn đặt hàng</string>
    <string name="create_post_region">Khẩu vị</string>
    <string name="create_post_tapToAdd">Thêm từ khóa...</string>
    <string name="create_post_tapToSet">Đặt thời gian</string>
    <string name="add_key_word">Thêm từ khóa</string>
    <string name="keyword">Từ khóa</string>
    <string name="sample_keywords">Ví dụ: Cơm sườn, thịt luột</string>
    <string name="create_post_all">Tất cả</string>
    <string name="create_menu_name">Tên thực đơn</string>
    <string name="create_menu_address">Địa chỉ</string>
    <string name="create_menu_endTime">Thời gian chốt đơn hàng</string>
    <string name="create_menu_addDish">Thêm món</string>
    <string name="create_menu_menuList">Thực đơn</string>
    <string name="create_menu_finish">Hoàn tất</string>
    <string name="sample_titles">Cơm thịt quay Đà Nẵng</string>
    <string name="sample_status">5</string>
    <string name="sample_price">25.000 vnd</string>
    <string name="menu_info">Thông tin thực đơn</string>
    <string name="create_menu_menuNumber">Tổng: 3</string>
    <string name="finish">Hoàn tát</string>
    <string name="cancel">Cancel</string>
    <string name="remove_menu">Remove menu</string>
    <string name="location_permission_title">Cấp quyền truy cập vị trí</string>
    <string name="location_peermission_message">Ứng dụng cần biết vị trí của bạn</string>
    <string name="string_menu">Thực đơn</string>
    <string name="rest">Còn lại</string>
    <string name="available_time">Vẫn còn</string>
    <string name="item_order">Đặt hàng</string>
    <string name="remove_menu_explain">Bạn có chắc muốn xóa thực đơn này hay ko?</string>
    <string name="no">Không</string>
    <string name="yes">Có</string>
    <string name="error_removed_menu">Có lỗi khi xóa thực đơn</string>
</resources>
