<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_my_cart"
        android:title="@string/my_cart"
        android:icon="@drawable/ic_shopping_cart_black_24dp" />
    <item
        android:id="@+id/item_thay_doi_HP"
        android:title="@string/book_history"
        android:icon="@android:drawable/ic_menu_recent_history"/>
    <item
        android:id="@+id/item_cat_dat"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_black_24dp"/>
    <item
        android:title="Other">
        <menu>
            <item
                android:id="@+id/item_dang_xuat"
                android:title="Đăng xuất"
                android:icon="@drawable/ic_power_settings_new_black_24dp"/>
        </menu>
    </item>
</menu>