<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_create_post">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textInputLayoutName"
                android:hint="@string/create_post_name"
                android:layout_marginBottom="16dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="a"
                    android:id="@+id/edtName"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilPrice"
                android:hint="@string/create_post_price"
                android:layout_marginBottom="16dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:id="@+id/edtPrice"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilSetNumber"
                android:hint="@string/create_post_setNumber"
                android:layout_marginBottom="16dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:id="@+id/edtSetNumber"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:text="@string/create_post_region"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbRegion"
                android:layout_marginBottom="16dp">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbAllRegion"
                    android:text="@string/create_post_all"
                    android:checked="true"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbMienBac"
                    android:text="@string/create_post_mienBac"/>
                
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbMienTrung"
                    android:text="@string/create_post_mienTrung" />
                
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbMienNam"
                    android:text="@string/create_post_mienNam" />
            </RadioGroup>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_keywords"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_post_keyWords"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvKeyWords"
                    android:text="@string/create_post_tapToAdd"/>
            </LinearLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_add_white_24dp"
                    android:layout_gravity="center"
                    android:tint="@color/colorGray"/>
                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/imageView"
                    android:contentDescription="@string/image_description"
                    android:layout_width="wrap_content"
                    android:layout_height="128dp"
                    android:src="@drawable/image_empty_border" />
                <ImageView
                    android:layout_margin="4dp"
                    android:id="@+id/imgCancel"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_cancel_white_24dp"
                    android:tint="@color/colorGray"
                    android:layout_gravity="top|right" />
            </FrameLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnUpload"
                android:text="@string/upload"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
