<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_create_post">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content"/>

            <EditText
                android:id="@+id/edtContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:layout_marginBottom="32dp"
                android:hint="@string/content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_place"
                android:layout_marginBottom="14dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tap_to_choose"
                android:textSize="18sp"
                android:id="@+id/tvPickPlace"
                android:layout_marginBottom="32dp"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_add_white_24dp"
                    android:layout_gravity="center"
                    android:tint="@color/colorGray"/>
                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/imageView"
                    android:contentDescription="@string/image_description"
                    android:layout_width="wrap_content"
                    android:layout_height="128dp"
                    android:src="@drawable/image_empty_border" />
                <ImageView
                    android:layout_margin="4dp"
                    android:id="@+id/imgCancel"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_cancel_white_24dp"
                    android:tint="@color/colorGray"
                    android:layout_gravity="top|right" />
            </FrameLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnUpload"
                android:text="@string/upload"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
